# public_CERTIFY_project

./: README.md
CTI_Sharing_Domain/Extended-MUD-Manager/: README.md
Domain_Runtime_Sensors_and_Monitoring/IDS/: .env  .gitignore  .gitmodules  README.md
Embedded_Device/High-end_COTS/: README.md
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/: Android.mk  CMakeLists.txt  README.md  compile_commands.json
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/host/: Makefile  dpabc_middleware.c  generateZkToken.c  main.c  setup_demo2.1.c  verifySignature.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/host/include/: dpabc_middleware.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/host/lib/aceunit/lib/: Makefile
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/host/lib/aceunit/test/e2eTests/abort_fixture/: abort_test_expected.txt
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/host/lib/aceunit/test/e2eTests/fork_fixture/: fork_test_expected.txt
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/: Makefile  dpabc_ta.c  sub.mk  user_ta_header_defines.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/include/: dpabc_ta.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/: setupscript.sh
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/include/: Dpabc.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/: .gitignore  CMakeLists.txt  README.md
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/include/: g1.h  g2.h  g3.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_BLS12381_32b/: bls_BLS12381.h  ecp2_BLS12381.h  fp12_BLS12381.h  fp2_BLS12381.h  mpin_BLS12381.h  pair_BLS12381.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_BLS12381_64b/: CMakeLists.txt  ecp_BLS12381.h  eddsa_BLS12381.h  fp4_BLS12381.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_Core/: config32.py  fp2_BLS12381.h  mpin_BLS12381.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/src/Miracl_BLS12381_32b/: g3.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/src/Miracl_BLS12381_64b/: g3.c  pair.c  types.h
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/src/example/: main_test.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/test/: testG1.c  testPair.c  testZp.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/lib/pfecCwrapper/test/cmocka/: CMakeLists.txt
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/src/PSMS/: Dpabc.c  Dpabc_types.c  Dpabc_utils.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/src/example/: main.c
Embedded_Device/High-end_COTS/package/TA/dpabc_middleware/ta/lib/p-abc-main/test/: main.c
Embedded_Device/High-end_COTS/package/TA/security_api/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.sh
Embedded_Device/High-end_COTS/package/TA/security_api/host/: ERA_agent.c  Makefile  bootstrapping_agent.c  custom_se_pkcs11.c  main.c  network_manager.c  rfc4764.c  security_api_interface.c
Embedded_Device/High-end_COTS/package/TA/security_api/host/include/: ERA_agent.h  bootstrapping_agent.h  custom_se_pkcs11.h  network_manager.h  rfc4764.h
Embedded_Device/High-end_COTS/package/TA/security_api/host/lib/aceunit/test/e2eTests/abort/: abort_test_expected.txt
Embedded_Device/High-end_COTS/package/TA/security_api/host/lib/aceunit/test/e2eTests/fork/: fork_test_expected.txt
Embedded_Device/High-end_COTS/package/TA/security_api/host/lib/libcrc/include/: checksum.h
Embedded_Device/High-end_COTS/package/TA/security_api/host/lib/libcrc/src/: crc16.c
Embedded_Device/High-end_COTS/package/TA/security_api/ta/: Android.mk  Makefile  security_api_ta.c  sub.mk  user_ta_header_defines.h  utils.c
Embedded_Device/High-end_COTS/package/TA/security_api/ta/include/: security_api_ta.h  utils.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/: CMakeLists.txt  Jenkinsfile  README.md
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/docs/: Doxyfile
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/include/: Zp.h  pair.h  utils.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_BLS12381_32b/: CMakeLists.txt  big_384_29.h  ecdh_BLS12381.h  ecp_BLS12381.h  fp4_BLS12381.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_BLS12381_64b/: config64.py
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/lib/Miracl_Core/: CMakeLists.txt  big_384_58.h  config64.py  ecp2_BLS12381.h  fp_BLS12381.h  pair_BLS12381.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/src/Miracl_BLS12381_32b/: Zp.c  g1.c  g2.c  types.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/src/Miracl_BLS12381_64b/: Zp.c  g1.c  g2.c  utils.c
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/lib/pfecCwrapper/test/: testG2.c
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/src/PSMS/: Dpabc.c  Dpabc_utils.h  types_impl.h
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/src/example/: main.c
Embedded_Device/High-end_COTS/package/TA/security_api/ta/lib/p-abc-main/test/: main.c
Embedded_Device/High-end_OpenHW/: README.md
Embedded_Device/Low-end_COTS/: README.md
Embedded_Device/Low-end_OpenHW/: README.md
(+1044 files in other folders)
